--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@provenanceio/walletconnect-js",
-  "version": "3.0.8",
+  "version": "3.0.9",
   "private": false,
   "sideEffects": false,
   "main": "esm/index.js",
@@ -47,6 +47,7 @@
     "@babel/plugin-proposal-object-rest-spread": "7.18.9",
     "@babel/plugin-proposal-optional-chaining": "7.18.9",
     "@babel/plugin-transform-modules-commonjs": "7.18.6",
+    "@babel/plugin-transform-nullish-coalescing-operator": "7.22.5",
     "@babel/plugin-transform-object-assign": "7.18.6",
     "@babel/plugin-transform-react-constant-elements": "7.18.12",
     "@babel/plugin-transform-runtime": "7.19.1",
